# urban-sdk-take-home-assignment

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  link.py  speed_record.py
app/schemas/: traffic.py
docs/: architecture.md
notebooks/.ipynb_checkpoints/: traffic_speed_visualization-checkpoint.ipynb
scripts/: ingest_data.py
tests/: conftest.py  test_api.py  test_api_integration.py
