[project]
name = "urban-sdk-take-home"
version = "0.1.0"
description = "FastAPI geospatial traffic microservice for the Urban SDK take-home assignment."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "geoalchemy2>=0.17,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=20.0,<21.0",
  "shapely>=2.1,<3.0",
  "orjson>=3.10,<4.0",
  "requests>=2.32,<3.0",
  "jupyter>=1.1,<2.0",
  "geopandas>=1.0,<2.0",
  "mapboxgl>=0.10,<1.0",
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-p no:capture -q"
testpaths = ["tests"]
markers = [
  "integration: tests that require a running PostgreSQL/PostGIS database with ingested data",
]
